--- a/card_css.css
+++ b/card_css.css
@@ -5,6 +5,18 @@
   background-repeat:no-repeat,no-repeat;
   background-size:cover,cover;
 }
+.team-img {
+  width: 25px;
+}
+.trial-img {
+  width: 25px;
+}
+.bool-img {
+  width: 20px;
+}
+.ttask-img {
+  width: 20px;
+}
 .cardtitle{
   text-align:center;
   font-family: DFKai-sb;
@@ -56,4 +68,25 @@ button{
 }
 .btn{
   width:100%;transition: all 0.6s;
+}
+.list-name::before {
+  content: '';
+  width: 396px;
+  height: 543px;
+  display: block;
+  background-image: '';
+  position: absolute;
+  z-index: 5;
+  left: 5em;
+}
+#filters {
+  display: inline-flex;
+}
+.btn-secondary.active{
+  background-color:#FFFFFF !important;
+  color:black !important;
+}
+.card-img{
+  width: auto;
+  height: 350px;
 }
