--- a/card_css.css
+++ b/card_css.css
@@ -11,7 +11,7 @@
 .trial-img {
   width: 25px;
 }
-.bool-img {
+.bool-img,.btn-img{
   width: 20px;
 }
 .ttask-img {
@@ -69,16 +69,6 @@ button{
 .btn{
   width:100%;transition: all 0.6s;
 }
-.list-name::before {
-  content: '';
-  width: 396px;
-  height: 543px;
-  display: block;
-  background-image: '';
-  position: absolute;
-  z-index: 5;
-  left: 5em;
-}
 #filters {
   display: inline-flex;
 }
@@ -103,4 +93,11 @@ p{
 h3{
   color:#2F4F4F;
   font-weight: bold;
+}
+.pop-container {
+  z-index: 999;
+  position: absolute;
+  width:100px;
+  height:auto;
+  display: none;
 }
